--- a/serverless.yml
+++ b/serverless.yml
@@ -1,7 +1,8 @@
+frameworkVersion: '3'
 service: serverless-stack-python-starter
 
 plugins:
-  - serverless-python-requirements
+  - serverless-python-requirements@^6.0.0
 
 custom:
   pythonRequirements:
@@ -9,14 +10,26 @@ custom:
 
 provider:
   name: aws
-  runtime: python3.6
-  stage: dev
-  region: us-east-1
+  runtime: python3.9
+  stage: ${opt:stage, 'dev'}
+  region: ${opt:region, 'us-east-1'}
+
+package:
+  individually: true
+  patterns:
+    - '!test/**'
+    - '!tests/**'
+    - '!__pycache__/**'
+    - '!*.pyc'
+    - '!*.pyo'
+    - '!*.dist-info/**'
 
 functions:
   hello:
     handler: handler.hello
+    memorySize: 128
+    timeout: 10
     events:
-      - http:
+      - httpApi:
           path: /
           method: get
