--- a/serverless.yml
+++ b/serverless.yml
@@ -1,7 +1,8 @@
+frameworkVersion: '3'
 service: serverless-stack-python-starter
 
 plugins:
-  - serverless-python-requirements
+  - serverless-python-requirements@^3.0.9
 
 custom:
   pythonRequirements:
@@ -9,14 +10,27 @@ custom:
 
 provider:
   name: aws
-  runtime: python3.6
+  runtime: python3.9
   stage: dev
   region: us-east-1
+  memorySize: 512
+  timeout: 10
+
+package:
+  patterns:
+    - '!node_modules/**'
+    - '!tests/**'
+    - '!*.md'
+    - '!requirements.txt'
+    - '!package.json'
+    - '!package-lock.json'
 
 functions:
   hello:
     handler: handler.hello
+    memorySize: 128
+    timeout: 5
     events:
-      - http:
+      - httpApi:
           path: /
           method: get
