--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,13 @@
+frameworkVersion: '3'
 service: serverless-stack-python-starter
+
+provider:
+  name: aws
+  runtime: python3.9
+  stage: dev
+  region: us-east-1
+  memorySize: 128
+  timeout: 10
 
 plugins:
   - serverless-python-requirements
@@ -7,16 +16,19 @@ custom:
   pythonRequirements:
     dockerizePip: false
 
-provider:
-  name: aws
-  runtime: python3.6
-  stage: dev
-  region: us-east-1
+package:
+  patterns:
+    - '!tests/**'
+    - '!docs/**'
+    - '!node_modules/**'
+    - '!*.md'
 
 functions:
   hello:
     handler: handler.hello
+    memorySize: 128
+    timeout: 10
     events:
-      - http:
+      - httpApi:
           path: /
           method: get
