--- a/serverless.yml
+++ b/serverless.yml
@@ -1,3 +1,5 @@
+frameworkVersion: '3'
+
 service: serverless-stack-python-starter
 
 plugins:
@@ -9,14 +11,31 @@ custom:
 
 provider:
   name: aws
-  runtime: python3.6
+  runtime: python3.9
   stage: dev
   region: us-east-1
+  memorySize: 128
+  timeout: 10
 
 functions:
   hello:
     handler: handler.hello
+    memorySize: 128
+    timeout: 10
     events:
-      - http:
+      - httpApi:
           path: /
           method: get
+
+package:
+  patterns:
+    - '!node_modules/**'
+    - '!test/**'
+    - '!tests/**'
+    - '!__pycache__/**'
+    - '!*.pyc'
+    - '!*.pyo'
+    - '!*.md'
+    - '!*.json'
+    - '!*.yaml'
+    - '!*.yml'
