--- a/serverless.yml
+++ b/serverless.yml
@@ -1,3 +1,4 @@
+frameworkVersion: '3'
 service: serverless-stack-python-starter
 
 plugins:
@@ -9,14 +10,25 @@ custom:
 
 provider:
   name: aws
-  runtime: python3.6
+  runtime: python3.9
   stage: dev
   region: us-east-1
+  memorySize: 256
+  timeout: 10
+
+package:
+  patterns:
+    - '!node_modules/**'
+    - '!test/**'
+    - '!tests/**'
+    - '!README.md'
 
 functions:
   hello:
     handler: handler.hello
+    memorySize: 256
+    timeout: 10
     events:
-      - http:
+      - httpApi:
           path: /
           method: get
